--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Jwt": {
+    "Key": "9!5@a$59#%8^7MPC]1MPC999587)($@!53DataMonkey78912345645447890#%^2345vvcczxxedddg!#$%132577979798dA&*($##$$%@!^&*DFGGFFFFA^%YHBFSSDFTYG",
+    "Issuer": "JWTAuthenticationServer",
+    "Audience": "JWTServicePostmanClient",
+    "Subject": "JWTServiceAccessToken"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
