--- a/mpc_dotnetc_user_server.yaml
+++ b/mpc_dotnetc_user_server.yaml
@@ -1,13 +1,13 @@
 version: '1.0'
 services:
   mpc_dotnetc_user_server:
-    container_name: mpc_dotnetc_user_server
-    image: mpc_dotnetc_user_server_rom
+    container_name: ${DOCKER_CONTAINER_NAME}
+    image: ${DOCKER_CONTAINER_IMAGE_NAME}
     build: ./Dockerfile
     volumes:
       - ./data:/data
     ports:
-      - 5177:80
+      - ${SERVER_NETWORK_PORT_NUMBER}:80
 volumes:
   data:
 
