--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,25 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Ignore .env files
+.env
+
+# Ignore all .txt files
+*.txt
+
+# Ignore build and output directories
+bin/
+obj/
+
+# Ignore user-specific settings
+.vscode/
+*.user
+*.suo
+*.rsuser
+*.sln.docstates
+
+# Ignore dependency caches
+node_modules/
+packages/
+
