--- a/mpc_dotnetc_user_server.csproj
+++ b/mpc_dotnetc_user_server.csproj
@@ -7,6 +7,7 @@
     <EnableUnsupportedRuntimeIdentifierWarning>false</EnableUnsupportedRuntimeIdentifierWarning>
     <NoWarn>$(NoWarn);CS7022</NoWarn>
     <NoWarn>$(NoWarn);NETSDK1206</NoWarn>
+    <NoWarn>$(NoWarn);ASP0000</NoWarn>
   </PropertyGroup>
   
   <ItemGroup>
@@ -29,12 +30,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\mpc_sqlite_users_database\**\*" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="..\mpc_sqlite_users_database\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>mpc_sqlite_users_database\%(RecursiveDir)%(Filename)%(Extension)</Link>
+    </Content>
   </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
-    <PackageReference Include="FakeItEasy" Version="8.3.0" />
     <PackageReference Include="FluentAssertions" Version="8.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.33" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.18" />
@@ -45,6 +49,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.18" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0">
