--- a/mpc_dotnetc_user_server.tests/mpc_dotnetc_user_server.tests.csproj
+++ b/mpc_dotnetc_user_server.tests/mpc_dotnetc_user_server.tests.csproj
@@ -9,10 +9,13 @@
 
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="FakeItEasy" Version="8.3.0" />
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="FluentAssertions" Version="8.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -29,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\Users\" />
+    <Folder Include="Controllers\Users\Account\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
