fixed a missing else if branch for direct chat bug and updated program cs w/ .env variable usuage

--- a/.gitignore
+++ b/.gitignore
@@ -369,6 +369,9 @@ FodyWeavers.xsd
 *.txt
 mpc_account.txt
 
+mpc_sqlite_users_database/
+mpc_sqlite_users_database/*
+
 # Ignore build and output directories
 bin/
 obj/
