refactored and included session-cookies for logout controller and login controller for email and twitch. removed token from login/logout due to session-cookies database (redis). moved files to new namespacing folders. bypassed user_agent for server because it was picking up axios from nextjs.

--- a/mpc_dotnetc_user_server.yaml
+++ b/mpc_dotnetc_user_server.yaml
@@ -3,6 +3,8 @@ services:
   mpc_dotnetc_user_server:
     container_name: ${DOCKER_CONTAINER_NAME}
     image: ${DOCKER_CONTAINER_IMAGE_NAME}
+    network:
+	- mpc_dotnetc_user_server_link_mpc_redis_user_session_cache_database
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,3 +16,6 @@ services:
       - .env
 volumes:
   data:
+networks:
+  mpc_dotnetc_user_server_link_mpc_redis_user_session_cache_database:
+    external: true
